--- a/nba.html
+++ b/nba.html
@@ -143,140 +143,112 @@
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-1">
-         San Antonio Spurs vs Indiana Pacers
+         Minnesota Timberwolves vs Miami Heat
         </a>
        </td>
        <td>
-        January 02, 2026 4:00 PM
+        January 03, 2026 2:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="January 03, 2026 4:00 PM:00" data-start="January 02, 2026 4:00 PM:00">
+        <span class="countdown-timer" data-end="January 04, 2026 2:00 PM:00" data-start="January 03, 2026 2:00 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-2">
-         Brooklyn Nets vs Washington Wizards
+         Philadelphia 76ers vs New York Knicks
         </a>
        </td>
        <td>
-        January 02, 2026 4:00 PM
+        January 03, 2026 4:30 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="January 03, 2026 4:00 PM:00" data-start="January 02, 2026 4:00 PM:00">
+        <span class="countdown-timer" data-end="January 04, 2026 4:30 PM:00" data-start="January 03, 2026 4:30 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-3">
-         Denver Nuggets vs Cleveland Cavaliers
+         Atlanta Hawks vs Toronto Raptors
         </a>
        </td>
        <td>
-        January 02, 2026 4:30 PM
+        January 03, 2026 4:30 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="January 03, 2026 4:30 PM:00" data-start="January 02, 2026 4:30 PM:00">
+        <span class="countdown-timer" data-end="January 04, 2026 4:30 PM:00" data-start="January 03, 2026 4:30 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-4">
-         Atlanta Hawks vs New York Knicks
+         Charlotte Hornets vs Chicago Bulls
         </a>
        </td>
        <td>
-        January 02, 2026 4:30 PM
+        January 03, 2026 5:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="January 03, 2026 4:30 PM:00" data-start="January 02, 2026 4:30 PM:00">
+        <span class="countdown-timer" data-end="January 04, 2026 5:00 PM:00" data-start="January 03, 2026 5:00 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-5">
-         Orlando Magic vs Chicago Bulls
+         Portland Trail Blazers vs San Antonio Spurs
         </a>
        </td>
        <td>
-        January 02, 2026 5:00 PM
+        January 03, 2026 5:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="January 03, 2026 5:00 PM:00" data-start="January 02, 2026 5:00 PM:00">
+        <span class="countdown-timer" data-end="January 04, 2026 5:00 PM:00" data-start="January 03, 2026 5:00 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-6">
-         Charlotte Hornets vs Milwaukee Bucks
+         Houston Rockets vs Dallas Mavericks
         </a>
        </td>
        <td>
-        January 02, 2026 5:00 PM
+        January 03, 2026 5:30 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="January 03, 2026 5:00 PM:00" data-start="January 02, 2026 5:00 PM:00">
+        <span class="countdown-timer" data-end="January 04, 2026 5:30 PM:00" data-start="January 03, 2026 5:30 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-7">
-         Portland Trail Blazers vs New Orleans Pelicans
+         Utah Jazz vs Golden State Warriors
         </a>
        </td>
        <td>
-        January 02, 2026 5:00 PM
+        January 03, 2026 7:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="January 03, 2026 5:00 PM:00" data-start="January 02, 2026 5:00 PM:00">
+        <span class="countdown-timer" data-end="January 04, 2026 7:00 PM:00" data-start="January 03, 2026 7:00 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-8">
-         Sacramento Kings vs Phoenix Suns
+         Boston Celtics vs Los Angeles Clippers
         </a>
        </td>
        <td>
-        January 02, 2026 6:00 PM
+        January 03, 2026 7:30 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="January 03, 2026 6:00 PM:00" data-start="January 02, 2026 6:00 PM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nba-streams-9">
-         Oklahoma City Thunder vs Golden State Warriors
-        </a>
-       </td>
-       <td>
-        January 02, 2026 7:00 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="January 03, 2026 7:00 PM:00" data-start="January 02, 2026 7:00 PM:00">
-        </span>
-       </td>
-      </tr>
-      <tr>
-       <td>
-        <a href="https://roxiestreams.live/nba-streams-10">
-         Memphis Grizzlies vs Los Angeles Lakers
-        </a>
-       </td>
-       <td>
-        January 02, 2026 7:30 PM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="January 03, 2026 7:30 PM:00" data-start="January 02, 2026 7:30 PM:00">
+        <span class="countdown-timer" data-end="January 04, 2026 7:30 PM:00" data-start="January 03, 2026 7:30 PM:00">
         </span>
        </td>
       </tr>
