--- a/nhl.html
+++ b/nhl.html
@@ -96,24 +96,69 @@
 </thead>
 <tbody>
         <tr>
-            <td><a href="https://roxiestreams.live/nhl-streams-1">Vegas Golden Knights vs St. Louis Blues</a></td>
-            <td>January 02, 2026 12:00 PM</td>
-            <td><span class="countdown-timer" data-end="2026-01-03 12:00:00" data-start="2026-01-02 12:00:00"></span></td>
+            <td><a href="https://roxiestreams.live/nhl-streams-1">Pittsburgh Penguins vs Detroit Red Wings</a></td>
+            <td>January 03, 2026 09:00 AM</td>
+            <td><span class="countdown-timer" data-end="2026-01-04 09:00:00" data-start="2026-01-03 09:00:00"></span></td>
         </tr>
         <tr>
-            <td><a href="https://roxiestreams.live/nhl-streams-2">New York Rangers vs Florida Panthers</a></td>
-            <td>January 02, 2026 05:00 PM</td>
-            <td><span class="countdown-timer" data-end="2026-01-03 17:00:00" data-start="2026-01-02 17:00:00"></span></td>
+            <td><a href="https://roxiestreams.live/nhl-streams-2">Utah Mammoth vs New Jersey Devils</a></td>
+            <td>January 03, 2026 12:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-04 12:00:00" data-start="2026-01-03 12:00:00"></span></td>
         </tr>
         <tr>
-            <td><a href="https://roxiestreams.live/nhl-streams-3">Seattle Kraken vs Vancouver Canucks</a></td>
-            <td>January 02, 2026 07:30 PM</td>
-            <td><span class="countdown-timer" data-end="2026-01-03 19:30:00" data-start="2026-01-02 19:30:00"></span></td>
+            <td><a href="https://roxiestreams.live/nhl-streams-3">Buffalo Sabres vs Columbus Blue Jackets</a></td>
+            <td>January 03, 2026 12:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-04 12:00:00" data-start="2026-01-03 12:00:00"></span></td>
         </tr>
         <tr>
-            <td><a href="https://roxiestreams.live/nhl-streams-4">Minnesota Wild vs Anaheim Ducks</a></td>
-            <td>January 02, 2026 07:30 PM</td>
-            <td><span class="countdown-timer" data-end="2026-01-03 19:30:00" data-start="2026-01-02 19:30:00"></span></td>
+            <td><a href="https://roxiestreams.live/nhl-streams-4">Philadelphia Flyers vs Edmonton Oilers</a></td>
+            <td>January 03, 2026 12:30 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-04 12:30:00" data-start="2026-01-03 12:30:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-5">Montreal Canadiens vs St. Louis Blues</a></td>
+            <td>January 03, 2026 01:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-04 13:00:00" data-start="2026-01-03 13:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-6">Tampa Bay Lightning vs San Jose Sharks</a></td>
+            <td>January 03, 2026 01:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-04 13:00:00" data-start="2026-01-03 13:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-7">Winnipeg Jets vs Ottawa Senators</a></td>
+            <td>January 03, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-04 16:00:00" data-start="2026-01-03 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-8">Toronto Maple Leafs vs New York Islanders</a></td>
+            <td>January 03, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-04 16:00:00" data-start="2026-01-03 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-9">Chicago Blackhawks vs Washington Capitals</a></td>
+            <td>January 03, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-04 16:00:00" data-start="2026-01-03 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-10">Colorado Avalanche vs Carolina Hurricanes</a></td>
+            <td>January 03, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-04 16:00:00" data-start="2026-01-03 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-11">Nashville Predators vs Calgary Flames</a></td>
+            <td>January 03, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-04 16:00:00" data-start="2026-01-03 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-12">Minnesota Wild vs Los Angeles Kings</a></td>
+            <td>January 03, 2026 06:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-04 18:00:00" data-start="2026-01-03 18:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-13">Boston Bruins vs Vancouver Canucks</a></td>
+            <td>January 03, 2026 07:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-04 19:00:00" data-start="2026-01-03 19:00:00"></span></td>
         </tr></tbody></table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
