--- a/nfl.html
+++ b/nfl.html
@@ -98,26 +98,17 @@
 <tr>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/ncaa-streams-1">Rice vs. Texas State</a></td>
-<td>January 02, 2026 10:00 AM</td>
-<td><span class="countdown-timer" data-end="January 03, 2026 09:00:00 AM" data-start="January 02, 2026 10:00:00 AM"></span></td>
+<td><a href="https://roxiestreams.live/nfl-streams-1">Carolina Panthers vs Tampa Bay Buccaneers</a></td>
+<td>January 03, 2026 13:30 PM</td>
+<td><span class="countdown-timer" data-end="January 04, 2026 09:00:00 AM" data-start="January 03, 2026 1:30:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/ncaa-streams-1">Navy vs. Cincinnati</a></td>
-<td>January 02, 2026 13:30 AM</td>
-<td><span class="countdown-timer" data-end="January 03, 2026 10:00:00 AM" data-start="January 02, 2026 1:30:00 PM"></span></td>
+<td><a href="https://roxiestreams.live/nfl-streams-2">Seattle Seahawks vs San Francisco 49ers</a></td>
+<td>January 03, 2026 17:00 PM</td>
+<td><span class="countdown-timer" data-end="January 04, 2026 10:00:00 AM" data-start="January 03, 2026 5:00:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/ncaa-streams-1">Wake Forest vs. Mississippi State</a></td>
-<td>January 02, 2026 05:00 PM</td>
-<td><span class="countdown-timer" data-end="January 03, 2026 05:00:00 PM" data-start="January 02, 2026 05:00:00 PM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/ncaa-streams-2">Arizona vs. SMU</a></td>
-<td>January 02, 2026 05:00 PM</td>
-<td><span class="countdown-timer" data-end="January 03, 2026 05:00:00 PM" data-start="January 02, 2026 05:00:00 PM"></span></td>
-</tr>
-</tbody></tr></tbody></table></div>
+</tr></tbody></tr></tbody></table></div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
 <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
 <li class="nav-item"><a class="nav-link px-2 text-body-secondary" href="https://discord.gg/JhkVmejRmn">Stream Request (Discord)</a></li>
