--- a/index.html
+++ b/index.html
@@ -184,29 +184,29 @@
 <tbody>
 <tr>
 <tr>
-<td><a href="https://roxiestreams.live/nfl">NCAA (College Bowls)</a></td>
-<td>January 02, 2026 10:00 AM</td>
-<td><span class="countdown-timer" data-end="January 03, 2026 10:00:00 AM" data-start="January 02, 2026 10:00:00 AM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/darts">World Darts Championship</a></td>
-<td>January 02, 2026 11:30 AM</td>
-<td><span class="countdown-timer" data-end="January 03, 2026 11:30:00 AM" data-start="January 02, 2026 11:30:00 AM"></span></td>
+<td><a href="https://roxiestreams.live/soccer">Premier League</a></td>
+<td>January 03, 2026 04:30 AM</td>
+<td><span class="countdown-timer" data-end="January 04, 2026 04:30:00 AM" data-start="January 03, 2026 04:30:00 AM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-4">Laliga</a></td>
-<td>January 02, 2026 12:00 PM</td>
-<td><span class="countdown-timer" data-end="January 03, 2026 12:00:00 PM" data-start="January 02, 2026 12:00:00 PM"></span></td>
+<td>January 03, 2026 05:00 AM</td>
+<td><span class="countdown-timer" data-end="January 04, 2026 05:00:00 AM" data-start="January 03, 2026 05:00:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/darts">World Darts Championship</a></td>
+<td>January 03, 2026 11:30 AM</td>
+<td><span class="countdown-timer" data-end="January 04, 2026 11:30:00 AM" data-start="January 03, 2026 11:30:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/nfl">NFL</a></td>
+<td>January 03, 2026 1:30 PM</td>
+<td><span class="countdown-timer" data-end="January 04, 2026 01:30:00 PM" data-start="January 03, 2026 01:30:00 PM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.live/nba">NBA</a></td>
-<td>January 02, 2026 16:00 PM</td>
-<td><span class="countdown-timer" data-end="January 03, 2026 05:00:00 PM" data-start="January 02, 2026 04:00:00 PM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/wwe-strams">WWE Smackdown</a></td>
-<td>January 02, 2026 17:00 PM</td>
-<td><span class="countdown-timer" data-end="January 03, 2026 05:00:00 PM" data-start="January 02, 2026 05:00:00 PM"></span></td>
+<td>January 03, 2026 2:00 PM</td>
+<td><span class="countdown-timer" data-end="January 04, 2026 02:00:00 PM" data-start="January 03, 2026 02:00:00 PM"></span></td>
 </tr>
 <tr>
 </tr></tr></tbody>
