--- a/fighting.html
+++ b/fighting.html
@@ -98,9 +98,9 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/wwe-streams">WWE Smackdown</a></td>
-<td>January 02, 2026 17:00 PM</td>
-<td><span class="countdown-timer" data-end="January 30, 2026 23:59:00" data-start="January 02, 2026 17:00:00"></span></td>
+<td><a href="https://roxiestreams.live/ppv-streams-1">SERRANO vs TELLES</a></td>
+<td>January 03, 2026 11:30 AM</td>
+<td><span class="countdown-timer" data-end="January 30, 2026 23:59:00" data-start="January 03, 2026 11:30:00"></span></td>
 </tr>
 <tr>
 </tbody>
