--- a/nba.html
+++ b/nba.html
@@ -254,6 +254,138 @@
       </tr>
      </tbody>
     </table>
+    <h2>
+     NBA Schedule for January 04, 2026
+    </h2>
+    <table id="eventsTable">
+     <thead>
+      <tr>
+       <th>
+        Event
+       </th>
+       <th>
+        Start Time
+       </th>
+       <th>
+        Countdown
+       </th>
+      </tr>
+     </thead>
+     <tbody>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-1">
+         Detroit Pistons vs Cleveland Cavaliers
+        </a>
+       </td>
+       <td>
+        January 04, 2026 11:00 AM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 05, 2026 11:00 AM:00" data-start="January 04, 2026 11:00 AM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-2">
+         Indiana Pacers vs Orlando Magic
+        </a>
+       </td>
+       <td>
+        January 04, 2026 12:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 05, 2026 12:00 PM:00" data-start="January 04, 2026 12:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-3">
+         Denver Nuggets vs Brooklyn Nets
+        </a>
+       </td>
+       <td>
+        January 04, 2026 12:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 05, 2026 12:30 PM:00" data-start="January 04, 2026 12:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-4">
+         New Orleans Pelicans vs Miami Heat
+        </a>
+       </td>
+       <td>
+        January 04, 2026 3:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 05, 2026 3:00 PM:00" data-start="January 04, 2026 3:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-5">
+         Minnesota Timberwolves vs Washington Wizards
+        </a>
+       </td>
+       <td>
+        January 04, 2026 3:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 05, 2026 3:00 PM:00" data-start="January 04, 2026 3:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-6">
+         Oklahoma City Thunder vs Phoenix Suns
+        </a>
+       </td>
+       <td>
+        January 04, 2026 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 05, 2026 5:00 PM:00" data-start="January 04, 2026 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-7">
+         Milwaukee Bucks vs Sacramento Kings
+        </a>
+       </td>
+       <td>
+        January 04, 2026 6:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 05, 2026 6:00 PM:00" data-start="January 04, 2026 6:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-8">
+         Memphis Grizzlies vs Los Angeles Lakers
+        </a>
+       </td>
+       <td>
+        January 04, 2026 6:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 05, 2026 6:30 PM:00" data-start="January 04, 2026 6:30 PM:00">
+        </span>
+       </td>
+      </tr>
+     </tbody>
+    </table>
     <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
      <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
       <li class="nav-item">
