--- a/nfl.html
+++ b/nfl.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
-
 <html data-bs-theme="dark" lang="en">
-<head>
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1" name="viewport"/>
-<title>Roxiestreams - Watch Live Sports, F1, UFC, NFL, TV</title>
-<meta content="Free PPV ufc, TV, NBA, NFL, and F1 streams" name="description"/>
-<meta content="Roxiestreams, ppv, boxing, dazn, f1, ufc, nba, for, stream, online, free, mrgamingstreams, f1, tv, nfl" name="keywords"/>
-<link href="https://fonts.googleapis.com" rel="preconnect"/>
-<link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
-<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
-<link href="css/main.css" rel="stylesheet" type="text/css"/>
-<link href="imgs/iconn.png" rel="shortcut icon" type="x-icon"/>
-<style>
-<script>
+ <head>
+  <meta charset="utf-8"/>
+  <meta content="width=device-width, initial-scale=1" name="viewport"/>
+  <title>
+   Roxiestreams - Watch Live Sports, F1, UFC, NFL, TV
+  </title>
+  <meta content="Free PPV ufc, TV, NBA, NFL, and F1 streams" name="description"/>
+  <meta content="Roxiestreams, ppv, boxing, dazn, f1, ufc, nba, for, stream, online, free, mrgamingstreams, f1, tv, nfl" name="keywords"/>
+  <link href="https://fonts.googleapis.com" rel="preconnect"/>
+  <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
+  <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+  <link href="css/main.css" rel="stylesheet" type="text/css"/>
+  <link href="imgs/iconn.png" rel="shortcut icon" type="x-icon"/>
+  <style>
+   <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
@@ -61,63 +62,353 @@
         h2 {
             color: pink;
         }
-    </style>
-</head>
-<body>
-<nav class="navbar navbar-expand-lg bg-black">
-<div class="container-fluid">
-<a class="navbar-brand" href="https://roxiestreams.live/">RoxieStreams</a>
-<button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbarSupportedContent" data-bs-toggle="collapse" type="button">
-<span class="navbar-toggler-icon"></span>
-</button>
-<div class="collapse navbar-collapse" id="navbarSupportedContent">
-<ul class="navbar-nav me-auto mb-2 mb-lg-0">
-<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/soccer">Soccer</a></li>
-<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/mlb">MLB</a></li>
-<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/nba">NBA</a></li>
-<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/nfl">NFL</a></li>
-<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/nhl">NHL</a></li>
-<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/fighting">Fighting</a></li>
-<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/motorsports">Motorsports</a></li>
-<li class="nav-item"><a class="nav-link" href="https://discord.gg/JhkVmejRmn">Stream Request (Discord)</a></li>
-</ul>
-</div>
-</div></nav>
-<div class="container container-fluid pt-2 text-white">
-<div class="mt-5">
-<h2 class="m-0" style="font-family: 'Kanit', sans-serif; font-weight: bold;">Upcoming NFL Events</h2>
-<table id="eventsTable">
-<thead>
-<tr>
-<th>Event</th>
-<th>Start Time</th>
-<th>Countdown</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<tbody>
-<tr>
-<td><a href="https://roxiestreams.live/nfl-streams-1">Carolina Panthers vs Tampa Bay Buccaneers</a></td>
-<td>January 03, 2026 13:30 PM</td>
-<td><span class="countdown-timer" data-end="January 04, 2026 09:00:00 AM" data-start="January 03, 2026 1:30:00 PM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/nfl-streams-2">Seattle Seahawks vs San Francisco 49ers</a></td>
-<td>January 03, 2026 17:00 PM</td>
-<td><span class="countdown-timer" data-end="January 04, 2026 10:00:00 AM" data-start="January 03, 2026 5:00:00 PM"></span></td>
-</tr>
-<tr>
-</tr></tbody></tr></tbody></table></div>
-<footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
-<ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
-<li class="nav-item"><a class="nav-link px-2 text-body-secondary" href="https://discord.gg/JhkVmejRmn">Stream Request (Discord)</a></li>
-</ul>
-<p class="mb-0 text-body-secondary text-center text-lg-start">Roxiestreams © 2024</p>
-</footer>
-<script src="js/bootstrap.bundle.min.js"></script>
-<script>
-        function startCountdown() {
+  </style>
+ </head>
+ <body>
+  <nav class="navbar navbar-expand-lg bg-black">
+   <div class="container-fluid">
+    <a class="navbar-brand" href="https://roxiestreams.live/">
+     RoxieStreams
+    </a>
+    <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbarSupportedContent" data-bs-toggle="collapse" type="button">
+     <span class="navbar-toggler-icon">
+     </span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+      <li class="nav-item">
+       <a class="nav-link" href="https://roxiestreams.live/soccer">
+        Soccer
+       </a>
+      </li>
+      <li class="nav-item">
+       <a class="nav-link" href="https://roxiestreams.live/mlb">
+        MLB
+       </a>
+      </li>
+      <li class="nav-item">
+       <a class="nav-link" href="https://roxiestreams.live/nba">
+        NBA
+       </a>
+      </li>
+      <li class="nav-item">
+       <a class="nav-link" href="https://roxiestreams.live/nfl">
+        NFL
+       </a>
+      </li>
+      <li class="nav-item">
+       <a class="nav-link" href="https://roxiestreams.live/nhl">
+        NHL
+       </a>
+      </li>
+      <li class="nav-item">
+       <a class="nav-link" href="https://roxiestreams.live/fighting">
+        Fighting
+       </a>
+      </li>
+      <li class="nav-item">
+       <a class="nav-link" href="https://roxiestreams.live/motorsports">
+        Motorsports
+       </a>
+      </li>
+      <li class="nav-item">
+       <a class="nav-link" href="https://discord.gg/JhkVmejRmn">
+        Stream Request (Discord)
+       </a>
+      </li>
+     </ul>
+    </div>
+   </div>
+  </nav>
+  <div class="container container-fluid pt-2 text-white">
+   <div class="mt-5">
+    <h2 class="m-0" style="font-family: 'Kanit', sans-serif; font-weight: bold;">
+     Upcoming NFL Events
+    </h2>
+    <table id="eventsTable">
+     <thead>
+      <tr>
+       <th>
+        Event
+       </th>
+       <th>
+        Start Time
+       </th>
+       <th>
+        Countdown
+       </th>
+      </tr>
+     </thead>
+     <tbody>
+      <tr>
+       <tbody>
+        <tr>
+         <td>
+          <a href="https://roxiestreams.live/nfl-streams-1">
+           Carolina Panthers vs Tampa Bay Buccaneers
+          </a>
+         </td>
+         <td>
+          January 03, 2026 13:30 PM
+         </td>
+         <td>
+          <span class="countdown-timer" data-end="January 04, 2026 09:00:00 AM" data-start="January 03, 2026 1:30:00 PM">
+          </span>
+         </td>
+        </tr>
+        <tr>
+         <td>
+          <a href="https://roxiestreams.live/nfl-streams-2">
+           Seattle Seahawks vs San Francisco 49ers
+          </a>
+         </td>
+         <td>
+          January 03, 2026 17:00 PM
+         </td>
+         <td>
+          <span class="countdown-timer" data-end="January 04, 2026 10:00:00 AM" data-start="January 03, 2026 5:00:00 PM">
+          </span>
+         </td>
+        </tr>
+        <tr>
+        </tr>
+       </tbody>
+      </tr>
+     </tbody>
+    </table>
+   </div>
+   <h2>
+    NFL Schedule for Sunday, January 4, 2026
+   </h2>
+   <table id="eventsTable">
+    <thead>
+     <tr>
+      <th>
+       Event
+      </th>
+      <th>
+       Start Time
+      </th>
+      <th>
+       Countdown
+      </th>
+     </tr>
+    </thead>
+    <tbody>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nfl-streams-1">
+        New Orleans Saints vs Atlanta Falcons
+       </a>
+      </td>
+      <td>
+       January 04, 2026 10:00 AM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="January 05, 2026 10:00 AM:00" data-start="January 04, 2026 10:00 AM:00">
+       </span>
+      </td>
+     </tr>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nfl-streams-2">
+        Cleveland Browns vs Cincinnati Bengals
+       </a>
+      </td>
+      <td>
+       January 04, 2026 10:00 AM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="January 05, 2026 10:00 AM:00" data-start="January 04, 2026 10:00 AM:00">
+       </span>
+      </td>
+     </tr>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nfl-streams-3">
+        Green Bay Packers vs Minnesota Vikings
+       </a>
+      </td>
+      <td>
+       January 04, 2026 10:00 AM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="January 05, 2026 10:00 AM:00" data-start="January 04, 2026 10:00 AM:00">
+       </span>
+      </td>
+     </tr>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nfl-streams-4">
+        Dallas Cowboys vs New York
+       </a>
+      </td>
+      <td>
+       January 04, 2026 10:00 AM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="January 05, 2026 10:00 AM:00" data-start="January 04, 2026 10:00 AM:00">
+       </span>
+      </td>
+     </tr>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nfl-streams-5">
+        Tennessee Titans vs Jacksonville Jaguars
+       </a>
+      </td>
+      <td>
+       January 04, 2026 10:00 AM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="January 05, 2026 10:00 AM:00" data-start="January 04, 2026 10:00 AM:00">
+       </span>
+      </td>
+     </tr>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nfl-streams-6">
+        Indianapolis Colts vs Houston Texans
+       </a>
+      </td>
+      <td>
+       January 04, 2026 10:00 AM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="January 05, 2026 10:00 AM:00" data-start="January 04, 2026 10:00 AM:00">
+       </span>
+      </td>
+     </tr>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nfl-streams-7">
+        New York vs Buffalo Bills
+       </a>
+      </td>
+      <td>
+       January 04, 2026 1:25 PM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="January 05, 2026 1:25 PM:00" data-start="January 04, 2026 1:25 PM:00">
+       </span>
+      </td>
+     </tr>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nfl-streams-8">
+        Detroit Lions vs Chicago Bears
+       </a>
+      </td>
+      <td>
+       January 04, 2026 1:25 PM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="January 05, 2026 1:25 PM:00" data-start="January 04, 2026 1:25 PM:00">
+       </span>
+      </td>
+     </tr>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nfl-streams-9">
+        Los Angeles Rams vs Denver Broncos
+       </a>
+      </td>
+      <td>
+       January 04, 2026 1:25 PM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="January 05, 2026 1:25 PM:00" data-start="January 04, 2026 1:25 PM:00">
+       </span>
+      </td>
+     </tr>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nfl-streams-10">
+        Kansas City Chiefs vs Las Vegas Raiders
+       </a>
+      </td>
+      <td>
+       January 04, 2026 1:25 PM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="January 05, 2026 1:25 PM:00" data-start="January 04, 2026 1:25 PM:00">
+       </span>
+      </td>
+     </tr>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nfl-streams-11">
+        Arizona Cardinals vs Los Angeles Rams
+       </a>
+      </td>
+      <td>
+       January 04, 2026 1:25 PM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="January 05, 2026 1:25 PM:00" data-start="January 04, 2026 1:25 PM:00">
+       </span>
+      </td>
+     </tr>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nfl-streams-12">
+        Miami Dolphins vs New England Patriots
+       </a>
+      </td>
+      <td>
+       January 04, 2026 1:25 PM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="January 05, 2026 1:25 PM:00" data-start="January 04, 2026 1:25 PM:00">
+       </span>
+      </td>
+     </tr>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nfl-streams-13">
+        Washington Commanders vs Philadelphia Eagles
+       </a>
+      </td>
+      <td>
+       January 04, 2026 1:25 PM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="January 05, 2026 1:25 PM:00" data-start="January 04, 2026 1:25 PM:00">
+       </span>
+      </td>
+     </tr>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nfl-streams-14">
+        Baltimore Ravens vs Pittsburgh Steelers
+       </a>
+      </td>
+      <td>
+       January 04, 2026 5:20 PM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="January 05, 2026 5:20 PM:00" data-start="January 04, 2026 5:20 PM:00">
+       </span>
+      </td>
+     </tr>
+    </tbody>
+   </table>
+   <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
+    <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
+     <li class="nav-item">
+      <a class="nav-link px-2 text-body-secondary" href="https://discord.gg/JhkVmejRmn">
+       Stream Request (Discord)
+      </a>
+     </li>
+    </ul>
+    <p class="mb-0 text-body-secondary text-center text-lg-start">
+     Roxiestreams © 2024
+    </p>
+   </footer>
+   <script src="js/bootstrap.bundle.min.js">
+   </script>
+   <script>
+    function startCountdown() {
             var countdownElements = document.querySelectorAll('.countdown-timer');
 
             countdownElements.forEach(function(element) {
@@ -146,6 +437,7 @@
         }
 
         window.onload = startCountdown;
-    </script>
-</div></body>
+   </script>
+  </div>
+ </body>
 </html>
