--- a/nhl.html
+++ b/nhl.html
@@ -159,6 +159,34 @@
             <td><a href="https://roxiestreams.live/nhl-streams-13">Boston Bruins vs Vancouver Canucks</a></td>
             <td>January 03, 2026 07:00 PM</td>
             <td><span class="countdown-timer" data-end="2026-01-04 19:00:00" data-start="2026-01-03 19:00:00"></span></td>
+        </tr>
+        <tr style="background-color: #333; color: white;">
+            <td colspan="3"><strong>Sunday, January 04, 2026</strong></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-1">Montreal Canadiens vs Dallas Stars</a></td>
+            <td>January 04, 2026 11:00 AM</td>
+            <td><span class="countdown-timer" data-end="2026-01-05 11:00:00" data-start="2026-01-04 11:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-2">Pittsburgh Penguins vs Columbus Blue Jackets</a></td>
+            <td>January 04, 2026 12:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-05 12:00:00" data-start="2026-01-04 12:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-3">Colorado Avalanche vs Florida Panthers</a></td>
+            <td>January 04, 2026 02:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-05 14:00:00" data-start="2026-01-04 14:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-4">Carolina Hurricanes vs New Jersey Devils</a></td>
+            <td>January 04, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-05 16:00:00" data-start="2026-01-04 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-5">Vegas Golden Knights vs Chicago Blackhawks</a></td>
+            <td>January 04, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-05 16:00:00" data-start="2026-01-04 16:00:00"></span></td>
         </tr></tbody></table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
