--- a/nfl.html
+++ b/nfl.html
@@ -391,6 +391,20 @@
        </span>
       </td>
      </tr>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/ncaa-streams-1">
+        Wisconsin-River Falls vs North Central
+       </a>
+      </td>
+      <td>
+       January 04, 2026 5:20 PM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="January 05, 2026 5:20 PM:00" data-start="January 04, 2026 5:20 PM:00">
+       </span>
+      </td>
+     </tr>
     </tbody>
    </table>
    <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
