--- a/nfl.html
+++ b/nfl.html
@@ -142,6 +142,21 @@
     <tbody>
      <tr>
       <td>
+       <a href="https://roxiestreams.live/redzone">
+        NFL RedZone
+       </a>
+      </td>
+      <td>
+       January 04, 2026 10:00 AM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="January 05, 2026 10:00 AM:00" data-start="January 04, 2026 10:00 AM:00">
+       </span>
+      </td>
+     </tr>
+     <tr>
+     <tr>
+      <td>
        <a href="https://roxiestreams.live/nfl-streams-1">
         New Orleans Saints vs Atlanta Falcons
        </a>
