--- a/nfl.html
+++ b/nfl.html
@@ -200,7 +200,7 @@
      <tr>
       <td>
        <a href="https://roxiestreams.live/nfl-streams-4">
-        Dallas Cowboys vs New York
+        Dallas Cowboys vs New York Giants
        </a>
       </td>
       <td>
@@ -242,7 +242,7 @@
      <tr>
       <td>
        <a href="https://roxiestreams.live/nfl-streams-7">
-        New York vs Buffalo Bills
+        New York Jets vs Buffalo Bills
        </a>
       </td>
       <td>
