--- a/MLBSCRIPT/nfl_with_streams.html
+++ b/MLBSCRIPT/nfl_with_streams.html
@@ -124,341 +124,266 @@
 <div class="container container-fluid pt-2 text-white">
 <div class="mt-5">
 <h2 class="m-0" style="font-family: 'Kanit', sans-serif; font-weight: bold;">
-     Upcoming NFL &amp; NCAA Events
+     Upcoming NFL Events
     </h2>
 <table id="eventsTable">
 <thead>
 <tr>
 <th>
-        Event
-       </th>
+       Event
+      </th>
 <th>
-        Start Time
-       </th>
+       Start Time
+      </th>
 <th>
-        Countdown
-       </th>
+       Countdown
+      </th>
 </tr>
 </thead>
 <tbody>
 <tr>
 <td>
-<a href="http://ahostingportal.com:8000/Marky0416/Integra1994/122593">
-         Arizona Cardinals vs Cincinnati Bengals
-        </a>
+<a href="https://roxiestreams.live/redzone">
+        NFL RedZone
+       </a>
 </td>
 <td>
-        December 28, 2025 10:00 AM
-       </td>
+       January 04, 2026 10:00 AM
+      </td>
 <td>
-<span class="countdown-timer" data-end="December 29, 2025 10:00 AM:00" data-start="December 28, 2025 10:00 AM:00">
+<span class="countdown-timer" data-end="January 05, 2026 10:00 AM:00" data-start="January 04, 2026 10:00 AM:00">
+</span>
+</td>
+</tr>
+<tr>
+<tr>
+<td>
+<a href="http://ahostingportal.com:8000/Marky0416/Integra1994/122597">
+        New Orleans Saints vs Atlanta Falcons
+       </a>
+</td>
+<td>
+       January 04, 2026 10:00 AM
+      </td>
+<td>
+<span class="countdown-timer" data-end="January 05, 2026 10:00 AM:00" data-start="January 04, 2026 10:00 AM:00">
+</span>
+</td>
+</tr>
+<tr>
+<td>
+<a href="http://ahostingportal.com:8000/Marky0416/Integra1994/122596">
+        Cleveland Browns vs Cincinnati Bengals
+       </a>
+</td>
+<td>
+       January 04, 2026 10:00 AM
+      </td>
+<td>
+<span class="countdown-timer" data-end="January 05, 2026 10:00 AM:00" data-start="January 04, 2026 10:00 AM:00">
+</span>
+</td>
+</tr>
+<tr>
+<td>
+<a href="http://ahostingportal.com:8000/Marky0416/Integra1994/122593">
+        Green Bay Packers vs Minnesota Vikings
+       </a>
+</td>
+<td>
+       January 04, 2026 10:00 AM
+      </td>
+<td>
+<span class="countdown-timer" data-end="January 05, 2026 10:00 AM:00" data-start="January 04, 2026 10:00 AM:00">
 </span>
 </td>
 </tr>
 <tr>
 <td>
 <a href="http://ahostingportal.com:8000/Marky0416/Integra1994/122592">
-         Pittsburgh Steelers vs Cleveland Browns
-        </a>
+        Dallas Cowboys vs New York
+       </a>
 </td>
 <td>
-        December 28, 2025 10:00 AM
-       </td>
+       January 04, 2026 10:00 AM
+      </td>
 <td>
-<span class="countdown-timer" data-end="December 29, 2025 10:00 AM:00" data-start="December 28, 2025 10:00 AM:00">
-</span>
-</td>
-</tr>
-<tr>
-<td>
-<a href="http://ahostingportal.com:8000/Marky0416/Integra1994/122588">
-         New Orleans Saints vs Tennessee Titans
-        </a>
-</td>
-<td>
-        December 28, 2025 10:00 AM
-       </td>
-<td>
-<span class="countdown-timer" data-end="December 29, 2025 10:00 AM:00" data-start="December 28, 2025 10:00 AM:00">
-</span>
-</td>
-</tr>
-<tr>
-<td>
-<a href="http://ahostingportal.com:8000/Marky0416/Integra1994/122591">
-         Jacksonville Jaguars vs Indianapolis Colts
-        </a>
-</td>
-<td>
-        December 28, 2025 10:00 AM
-       </td>
-<td>
-<span class="countdown-timer" data-end="December 29, 2025 10:00 AM:00" data-start="December 28, 2025 10:00 AM:00">
-</span>
-</td>
-</tr>
-<tr>
-<td>
-<a href="http://ahostingportal.com:8000/Marky0416/Integra1994/122590">
-         Tampa Bay Buccaneers vs Miami Dolphins
-        </a>
-</td>
-<td>
-        December 28, 2025 10:00 AM
-       </td>
-<td>
-<span class="countdown-timer" data-end="December 29, 2025 10:00 AM:00" data-start="December 28, 2025 10:00 AM:00">
-</span>
-</td>
-</tr>
-<tr>
-<td>
-<a href="https://roxiestreams.live/nfl-streams-6">
-         New England Patriots vs New York
-        </a>
-</td>
-<td>
-        December 28, 2025 10:00 AM
-       </td>
-<td>
-<span class="countdown-timer" data-end="December 29, 2025 10:00 AM:00" data-start="December 28, 2025 10:00 AM:00">
+<span class="countdown-timer" data-end="January 05, 2026 10:00 AM:00" data-start="January 04, 2026 10:00 AM:00">
 </span>
 </td>
 </tr>
 <tr>
 <td>
 <a href="http://ahostingportal.com:8000/Marky0416/Integra1994/122594">
-         Seattle Seahawks vs Carolina Panthers
-        </a>
+        Tennessee Titans vs Jacksonville Jaguars
+       </a>
 </td>
 <td>
-        December 28, 2025 10:00 AM
-       </td>
+       January 04, 2026 10:00 AM
+      </td>
 <td>
-<span class="countdown-timer" data-end="December 29, 2025 10:00 AM:00" data-start="December 28, 2025 10:00 AM:00">
+<span class="countdown-timer" data-end="January 05, 2026 10:00 AM:00" data-start="January 04, 2026 10:00 AM:00">
 </span>
 </td>
 </tr>
 <tr>
 <td>
-<a href="https://roxiestreams.live/nfl-streams-8">
-         New York vs Las Vegas Raiders
-        </a>
+<a href="http://ahostingportal.com:8000/Marky0416/Integra1994/122595">
+        Indianapolis Colts vs Houston Texans
+       </a>
 </td>
 <td>
-        December 28, 2025 1:05 PM
-       </td>
+       January 04, 2026 10:00 AM
+      </td>
 <td>
-<span class="countdown-timer" data-end="December 29, 2025 1:05 PM:00" data-start="December 28, 2025 1:05 PM:00">
-</span>
-</td>
-</tr>
-<tr>
-<td>
-<a href="http://ahostingportal.com:8000/Marky0416/Integra1994/122586">
-         Philadelphia Eagles vs Buffalo Bills
-        </a>
-</td>
-<td>
-        December 28, 2025 1:25 PM
-       </td>
-<td>
-<span class="countdown-timer" data-end="December 29, 2025 1:25 PM:00" data-start="December 28, 2025 1:25 PM:00">
-</span>
-</td>
-</tr>
-<tr>
-<td>
-<a href="http://ahostingportal.com:8000/Marky0416/Integra1994/122585">
-         Chicago Bears vs San Francisco 49ers
-        </a>
-</td>
-<td>
-        December 28, 2025 5:20 PM
-       </td>
-<td>
-<span class="countdown-timer" data-end="December 29, 2025 5:20 PM:00" data-start="December 28, 2025 5:20 PM:00">
-</span>
-</td>
-</tr>
-</tbody>
-</table>
-<h2>
-     NFL Schedule for Sunday, December 28, 2025
-    </h2>
-<table id="eventsTable">
-<thead>
-<tr>
-<th>
-        Event
-       </th>
-<th>
-        Start Time
-       </th>
-<th>
-        Countdown
-       </th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>
-<a href="http://ahostingportal.com:8000/Marky0416/Integra1994/122593">
-         Arizona Cardinals vs Cincinnati Bengals
-        </a>
-</td>
-<td>
-        December 28, 2025 1:00 PM
-       </td>
-<td>
-<span class="countdown-timer" data-end="December 29, 2025 1:00 PM:00" data-start="December 28, 2025 1:00 PM:00">
-</span>
-</td>
-</tr>
-<tr>
-<td>
-<a href="http://ahostingportal.com:8000/Marky0416/Integra1994/122592">
-         Pittsburgh Steelers vs Cleveland Browns
-        </a>
-</td>
-<td>
-        December 28, 2025 1:00 PM
-       </td>
-<td>
-<span class="countdown-timer" data-end="December 29, 2025 1:00 PM:00" data-start="December 28, 2025 1:00 PM:00">
-</span>
-</td>
-</tr>
-<tr>
-<td>
-<a href="http://ahostingportal.com:8000/Marky0416/Integra1994/122588">
-         New Orleans Saints vs Tennessee Titans
-        </a>
-</td>
-<td>
-        December 28, 2025 1:00 PM
-       </td>
-<td>
-<span class="countdown-timer" data-end="December 29, 2025 1:00 PM:00" data-start="December 28, 2025 1:00 PM:00">
+<span class="countdown-timer" data-end="January 05, 2026 10:00 AM:00" data-start="January 04, 2026 10:00 AM:00">
 </span>
 </td>
 </tr>
 <tr>
 <td>
 <a href="http://ahostingportal.com:8000/Marky0416/Integra1994/122591">
-         Jacksonville Jaguars vs Indianapolis Colts
-        </a>
+        New York vs Buffalo Bills
+       </a>
 </td>
 <td>
-        December 28, 2025 1:00 PM
-       </td>
+       January 04, 2026 1:25 PM
+      </td>
 <td>
-<span class="countdown-timer" data-end="December 29, 2025 1:00 PM:00" data-start="December 28, 2025 1:00 PM:00">
+<span class="countdown-timer" data-end="January 05, 2026 1:25 PM:00" data-start="January 04, 2026 1:25 PM:00">
 </span>
 </td>
 </tr>
 <tr>
 <td>
 <a href="http://ahostingportal.com:8000/Marky0416/Integra1994/122590">
-         Tampa Bay Buccaneers vs Miami Dolphins
-        </a>
+        Detroit Lions vs Chicago Bears
+       </a>
 </td>
 <td>
-        December 28, 2025 1:00 PM
-       </td>
+       January 04, 2026 1:25 PM
+      </td>
 <td>
-<span class="countdown-timer" data-end="December 29, 2025 1:00 PM:00" data-start="December 28, 2025 1:00 PM:00">
+<span class="countdown-timer" data-end="January 05, 2026 1:25 PM:00" data-start="January 04, 2026 1:25 PM:00">
 </span>
 </td>
 </tr>
 <tr>
 <td>
-<a href="https://roxiestreams.live/nfl-streams-6">
-         New England Patriots vs New York
-        </a>
+<a href="http://ahostingportal.com:8000/Marky0416/Integra1994/122589">
+        Los Angeles Rams vs Denver Broncos
+       </a>
 </td>
 <td>
-        December 28, 2025 1:00 PM
-       </td>
+       January 04, 2026 1:25 PM
+      </td>
 <td>
-<span class="countdown-timer" data-end="December 29, 2025 1:00 PM:00" data-start="December 28, 2025 1:00 PM:00">
+<span class="countdown-timer" data-end="January 05, 2026 1:25 PM:00" data-start="January 04, 2026 1:25 PM:00">
 </span>
 </td>
 </tr>
 <tr>
 <td>
-<a href="http://ahostingportal.com:8000/Marky0416/Integra1994/122594">
-         Seattle Seahawks vs Carolina Panthers
-        </a>
+<a href="http://ahostingportal.com:8000/Marky0416/Integra1994/122587">
+        Kansas City Chiefs vs Las Vegas Raiders
+       </a>
 </td>
 <td>
-        December 28, 2025 1:00 PM
-       </td>
+       January 04, 2026 1:25 PM
+      </td>
 <td>
-<span class="countdown-timer" data-end="December 29, 2025 1:00 PM:00" data-start="December 28, 2025 1:00 PM:00">
+<span class="countdown-timer" data-end="January 05, 2026 1:25 PM:00" data-start="January 04, 2026 1:25 PM:00">
 </span>
 </td>
 </tr>
 <tr>
 <td>
-<a href="https://roxiestreams.live/nfl-streams-8">
-         New York vs Las Vegas Raiders
-        </a>
+<a href="http://ahostingportal.com:8000/Marky0416/Integra1994/122588">
+        Arizona Cardinals vs Los Angeles Rams
+       </a>
 </td>
 <td>
-        December 28, 2025 4:05 PM
-       </td>
+       January 04, 2026 1:25 PM
+      </td>
 <td>
-<span class="countdown-timer" data-end="December 29, 2025 4:05 PM:00" data-start="December 28, 2025 4:05 PM:00">
-</span>
-</td>
-</tr>
-<tr>
-<td>
-<a href="http://ahostingportal.com:8000/Marky0416/Integra1994/122586">
-         Philadelphia Eagles vs Buffalo Bills
-        </a>
-</td>
-<td>
-        December 28, 2025 4:25 PM
-       </td>
-<td>
-<span class="countdown-timer" data-end="December 29, 2025 4:25 PM:00" data-start="December 28, 2025 4:25 PM:00">
+<span class="countdown-timer" data-end="January 05, 2026 1:25 PM:00" data-start="January 04, 2026 1:25 PM:00">
 </span>
 </td>
 </tr>
 <tr>
 <td>
 <a href="http://ahostingportal.com:8000/Marky0416/Integra1994/122585">
-         Chicago Bears vs San Francisco 49ers
-        </a>
+        Miami Dolphins vs New England Patriots
+       </a>
 </td>
 <td>
-        December 28, 2025 8:20 PM
-       </td>
+       January 04, 2026 1:25 PM
+      </td>
 <td>
-<span class="countdown-timer" data-end="December 29, 2025 8:20 PM:00" data-start="December 28, 2025 8:20 PM:00">
+<span class="countdown-timer" data-end="January 05, 2026 1:25 PM:00" data-start="January 04, 2026 1:25 PM:00">
 </span>
 </td>
 </tr>
-</tbody>
+<tr>
+<td>
+<a href="https://roxiestreams.live/nfl-streams-13">
+        Washington Commanders vs Philadelphia Eagles
+       </a>
+</td>
+<td>
+       January 04, 2026 1:25 PM
+      </td>
+<td>
+<span class="countdown-timer" data-end="January 05, 2026 1:25 PM:00" data-start="January 04, 2026 1:25 PM:00">
+</span>
+</td>
+</tr>
+<tr>
+<td>
+<a href="http://ahostingportal.com:8000/Marky0416/Integra1994/122584">
+        Baltimore Ravens vs Pittsburgh Steelers
+       </a>
+</td>
+<td>
+       January 04, 2026 5:20 PM
+      </td>
+<td>
+<span class="countdown-timer" data-end="January 05, 2026 5:20 PM:00" data-start="January 04, 2026 5:20 PM:00">
+</span>
+</td>
+</tr>
+<tr>
+<td>
+<a href="https://roxiestreams.live/ncaa-streams-1">
+        Wisconsin-River Falls vs North Central
+       </a>
+</td>
+<td>
+       January 04, 2026 5:20 PM
+      </td>
+<td>
+<span class="countdown-timer" data-end="January 05, 2026 5:20 PM:00" data-start="January 04, 2026 5:20 PM:00">
+</span>
+</td>
+</tr>
+</tr></tbody>
 </table>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
 <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
 <li class="nav-item">
 <a class="nav-link px-2 text-body-secondary" href="https://discord.gg/JhkVmejRmn">
-        Stream Request (Discord)
-       </a>
+       Stream Request (Discord)
+      </a>
 </li>
 </ul>
 <p class="mb-0 text-body-secondary text-center text-lg-start">
-      Roxiestreams © 2024
-     </p>
+     Roxiestreams © 2024
+    </p>
 </footer>
 <script src="js/bootstrap.bundle.min.js">
 </script>
 <script>
-     function startCountdown() {
+    function startCountdown() {
             var countdownElements = document.querySelectorAll('.countdown-timer');
 
             countdownElements.forEach(function(element) {
@@ -487,8 +412,7 @@
         }
 
         window.onload = startCountdown;
-    </script>
+   </script>
 </div>
-</div>
-</body>
+</div></body>
 </html>
