--- a/nfl.html
+++ b/nfl.html
@@ -270,7 +270,7 @@
      <tr>
       <td>
        <a href="https://roxiestreams.live/nfl-streams-9">
-        Los Angeles Rams vs Denver Broncos
+        Los Angeles Chargers vs Denver Broncos
        </a>
       </td>
       <td>
