--- a/nba.html
+++ b/nba.html
@@ -143,112 +143,112 @@
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-1">
-         Detroit Pistons vs Cleveland Cavaliers
+         New York Knicks vs Detroit Pistons
         </a>
        </td>
        <td>
-        January 04, 2026 11:00 AM
+        January 05, 2026 4:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="January 05, 2026 11:00 AM:00" data-start="January 04, 2026 11:00 AM:00">
+        <span class="countdown-timer" data-end="January 06, 2026 4:00 PM:00" data-start="January 05, 2026 4:00 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-2">
-         Indiana Pacers vs Orlando Magic
+         Chicago Bulls vs Boston Celtics
         </a>
        </td>
        <td>
-        January 04, 2026 12:00 PM
+        January 05, 2026 4:30 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="January 05, 2026 12:00 PM:00" data-start="January 04, 2026 12:00 PM:00">
+        <span class="countdown-timer" data-end="January 06, 2026 4:30 PM:00" data-start="January 05, 2026 4:30 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-3">
-         Denver Nuggets vs Brooklyn Nets
+         Atlanta Hawks vs Toronto Raptors
         </a>
        </td>
        <td>
-        January 04, 2026 12:30 PM
+        January 05, 2026 4:30 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="January 05, 2026 12:30 PM:00" data-start="January 04, 2026 12:30 PM:00">
+        <span class="countdown-timer" data-end="January 06, 2026 4:30 PM:00" data-start="January 05, 2026 4:30 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-4">
-         New Orleans Pelicans vs Miami Heat
+         Phoenix Suns vs Houston Rockets
         </a>
        </td>
        <td>
-        January 04, 2026 3:00 PM
+        January 05, 2026 5:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="January 05, 2026 3:00 PM:00" data-start="January 04, 2026 3:00 PM:00">
+        <span class="countdown-timer" data-end="January 06, 2026 5:00 PM:00" data-start="January 05, 2026 5:00 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-5">
-         Minnesota Timberwolves vs Washington Wizards
+         Charlotte Hornets vs Oklahoma City Thunder
         </a>
        </td>
        <td>
-        January 04, 2026 3:00 PM
+        January 05, 2026 5:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="January 05, 2026 3:00 PM:00" data-start="January 04, 2026 3:00 PM:00">
+        <span class="countdown-timer" data-end="January 06, 2026 5:00 PM:00" data-start="January 05, 2026 5:00 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-6">
-         Oklahoma City Thunder vs Phoenix Suns
+         Denver Nuggets vs Philadelphia 76ers
         </a>
        </td>
        <td>
-        January 04, 2026 5:00 PM
+        January 05, 2026 5:30 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="January 05, 2026 5:00 PM:00" data-start="January 04, 2026 5:00 PM:00">
+        <span class="countdown-timer" data-end="January 06, 2026 5:30 PM:00" data-start="January 05, 2026 5:30 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-7">
-         Milwaukee Bucks vs Sacramento Kings
+         Golden State Warriors vs Los Angeles Clippers
         </a>
        </td>
        <td>
-        January 04, 2026 6:00 PM
+        January 05, 2026 7:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="January 05, 2026 6:00 PM:00" data-start="January 04, 2026 6:00 PM:00">
+        <span class="countdown-timer" data-end="January 06, 2026 7:00 PM:00" data-start="January 05, 2026 7:00 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-8">
-         Memphis Grizzlies vs Los Angeles Lakers
+         Utah Jazz vs Portland Trail Blazers
         </a>
        </td>
        <td>
-        January 04, 2026 6:30 PM
+        January 05, 2026 7:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="January 05, 2026 6:30 PM:00" data-start="January 04, 2026 6:30 PM:00">
+        <span class="countdown-timer" data-end="January 06, 2026 7:00 PM:00" data-start="January 05, 2026 7:00 PM:00">
         </span>
        </td>
       </tr>
