--- a/soccer.html
+++ b/soccer.html
@@ -98,12 +98,12 @@
 <tr>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-12">Manchester City vs Chelsea</a></td>
+<td><a href="https://roxiestreams.live/soccer-streams-1">Galatasaray vs Trabzonspor</a></td>
 <td>January 04, 2026 09:30 AM</td>
 <td><span class="countdown-timer" data-end="January 05, 2026 09:30:00 AM" data-start="January 04, 2026 09:30:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-4">Mallorca vs Girona</a></td>
+<td><a href="https://roxiestreams.live/soccer-streams-2">Leicester City vs West Bromwich Albion</a></td>
 <td>January 04, 2026 09:30 AM</td>
 <td><span class="countdown-timer" data-end="January 05, 2026 09:30:00 AM" data-start="January 04, 2026 09:30:00 AM"></span></td>
 </tr>
