--- a/nhl.html
+++ b/nhl.html
@@ -96,29 +96,29 @@
 </thead>
 <tbody>
         <tr>
-            <td><a href="https://roxiestreams.live/nhl-streams-1">Montreal Canadiens vs Dallas Stars</a></td>
-            <td>January 04, 2026 11:00 AM</td>
-            <td><span class="countdown-timer" data-end="2026-01-05 11:00:00" data-start="2026-01-04 11:00:00"></span></td>
+            <td><a href="https://roxiestreams.live/nhl-streams-1">Utah Mammoth vs New York Rangers</a></td>
+            <td>January 05, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-06 16:00:00" data-start="2026-01-05 16:00:00"></span></td>
         </tr>
         <tr>
-            <td><a href="https://roxiestreams.live/nhl-streams-2">Pittsburgh Penguins vs Columbus Blue Jackets</a></td>
-            <td>January 04, 2026 12:00 PM</td>
-            <td><span class="countdown-timer" data-end="2026-01-05 12:00:00" data-start="2026-01-04 12:00:00"></span></td>
+            <td><a href="https://roxiestreams.live/nhl-streams-2">Anaheim Ducks vs Washington Capitals</a></td>
+            <td>January 05, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-06 16:00:00" data-start="2026-01-05 16:00:00"></span></td>
         </tr>
         <tr>
-            <td><a href="https://roxiestreams.live/nhl-streams-3">Colorado Avalanche vs Florida Panthers</a></td>
-            <td>January 04, 2026 02:00 PM</td>
-            <td><span class="countdown-timer" data-end="2026-01-05 14:00:00" data-start="2026-01-04 14:00:00"></span></td>
+            <td><a href="https://roxiestreams.live/nhl-streams-3">Detroit Red Wings vs Ottawa Senators</a></td>
+            <td>January 05, 2026 04:30 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-06 16:30:00" data-start="2026-01-05 16:30:00"></span></td>
         </tr>
         <tr>
-            <td><a href="https://roxiestreams.live/nhl-streams-4">Carolina Hurricanes vs New Jersey Devils</a></td>
-            <td>January 04, 2026 04:00 PM</td>
-            <td><span class="countdown-timer" data-end="2026-01-05 16:00:00" data-start="2026-01-04 16:00:00"></span></td>
+            <td><a href="https://roxiestreams.live/nhl-streams-4">Seattle Kraken vs Calgary Flames</a></td>
+            <td>January 05, 2026 06:30 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-06 18:30:00" data-start="2026-01-05 18:30:00"></span></td>
         </tr>
         <tr>
-            <td><a href="https://roxiestreams.live/nhl-streams-5">Vegas Golden Knights vs Chicago Blackhawks</a></td>
-            <td>January 04, 2026 04:00 PM</td>
-            <td><span class="countdown-timer" data-end="2026-01-05 16:00:00" data-start="2026-01-04 16:00:00"></span></td>
+            <td><a href="https://roxiestreams.live/nhl-streams-5">Minnesota Wild vs Los Angeles Kings</a></td>
+            <td>January 05, 2026 07:30 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-06 19:30:00" data-start="2026-01-05 19:30:00"></span></td>
         </tr></tbody></table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
