--- a/nfl.html
+++ b/nfl.html
@@ -142,226 +142,15 @@
     <tbody>
      <tr>
       <td>
-       <a href="https://roxiestreams.live/redzone">
-        NFL RedZone
-       </a>
-      </td>
-      <td>
-       January 04, 2026 10:00 AM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="January 05, 2026 10:00 AM:00" data-start="January 04, 2026 10:00 AM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nfl-streams-1">
-        New Orleans Saints vs Atlanta Falcons
-       </a>
-      </td>
-      <td>
-       January 04, 2026 10:00 AM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="January 05, 2026 10:00 AM:00" data-start="January 04, 2026 10:00 AM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nfl-streams-2">
-        Cleveland Browns vs Cincinnati Bengals
-       </a>
-      </td>
-      <td>
-       January 04, 2026 10:00 AM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="January 05, 2026 10:00 AM:00" data-start="January 04, 2026 10:00 AM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nfl-streams-3">
-        Green Bay Packers vs Minnesota Vikings
-       </a>
-      </td>
-      <td>
-       January 04, 2026 10:00 AM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="January 05, 2026 10:00 AM:00" data-start="January 04, 2026 10:00 AM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nfl-streams-4">
-        Dallas Cowboys vs New York Giants
-       </a>
-      </td>
-      <td>
-       January 04, 2026 10:00 AM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="January 05, 2026 10:00 AM:00" data-start="January 04, 2026 10:00 AM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nfl-streams-5">
-        Tennessee Titans vs Jacksonville Jaguars
-       </a>
-      </td>
-      <td>
-       January 04, 2026 10:00 AM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="January 05, 2026 10:00 AM:00" data-start="January 04, 2026 10:00 AM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nfl-streams-6">
-        Indianapolis Colts vs Houston Texans
-       </a>
-      </td>
-      <td>
-       January 04, 2026 10:00 AM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="January 05, 2026 10:00 AM:00" data-start="January 04, 2026 10:00 AM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nfl-streams-7">
-        New York Jets vs Buffalo Bills
-       </a>
-      </td>
-      <td>
-       January 04, 2026 1:25 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="January 05, 2026 1:25 PM:00" data-start="January 04, 2026 1:25 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nfl-streams-8">
-        Detroit Lions vs Chicago Bears
-       </a>
-      </td>
-      <td>
-       January 04, 2026 1:25 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="January 05, 2026 1:25 PM:00" data-start="January 04, 2026 1:25 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nfl-streams-9">
-        Los Angeles Chargers vs Denver Broncos
-       </a>
-      </td>
-      <td>
-       January 04, 2026 1:25 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="January 05, 2026 1:25 PM:00" data-start="January 04, 2026 1:25 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nfl-streams-10">
-        Kansas City Chiefs vs Las Vegas Raiders
-       </a>
-      </td>
-      <td>
-       January 04, 2026 1:25 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="January 05, 2026 1:25 PM:00" data-start="January 04, 2026 1:25 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nfl-streams-11">
-        Arizona Cardinals vs Los Angeles Rams
-       </a>
-      </td>
-      <td>
-       January 04, 2026 1:25 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="January 05, 2026 1:25 PM:00" data-start="January 04, 2026 1:25 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nfl-streams-12">
-        Miami Dolphins vs New England Patriots
-       </a>
-      </td>
-      <td>
-       January 04, 2026 1:25 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="January 05, 2026 1:25 PM:00" data-start="January 04, 2026 1:25 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nfl-streams-13">
-        Washington Commanders vs Philadelphia Eagles
-       </a>
-      </td>
-      <td>
-       January 04, 2026 1:25 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="January 05, 2026 1:25 PM:00" data-start="January 04, 2026 1:25 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
-       <a href="https://roxiestreams.live/nfl-streams-14">
-        Baltimore Ravens vs Pittsburgh Steelers
-       </a>
-      </td>
-      <td>
-       January 04, 2026 5:20 PM
-      </td>
-      <td>
-       <span class="countdown-timer" data-end="January 05, 2026 5:20 PM:00" data-start="January 04, 2026 5:20 PM:00">
-       </span>
-      </td>
-     </tr>
-     <tr>
-      <td>
        <a href="https://roxiestreams.live/ncaa-streams-1">
-        Wisconsin-River Falls vs North Central
+        Illinois State vs Montana State
        </a>
       </td>
       <td>
-       January 04, 2026 5:20 PM
+       January 05, 2026 16:30 PM
       </td>
       <td>
-       <span class="countdown-timer" data-end="January 05, 2026 5:20 PM:00" data-start="January 04, 2026 5:20 PM:00">
+       <span class="countdown-timer" data-end="January 06, 2026 10:00 AM:00" data-start="January 05, 2026 4:30 PM:00">
        </span>
       </td>
      </tr>
