--- a/index.html
+++ b/index.html
@@ -184,24 +184,19 @@
 <tbody>
 <tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer">Premier League</a></td>
-<td>January 04, 2026 09:30 AM</td>
+<td><a href="https://roxiestreams.live/nba">NBA</a></td>
+<td>January 05, 2026 16:00 PM</td>
 <td><span class="countdown-timer" data-end="January 05, 2026 09:30:00 AM" data-start="January 04, 2026 09:30:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-4">Laliga</a></td>
-<td>January 04, 2026 09:30 AM</td>
-<td><span class="countdown-timer" data-end="January 05, 2026 09:30:00 AM" data-start="January 04, 2026 09:30:00 AM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/nfl">NFL</a></td>
-<td>January 04, 2026 10:00 AM</td>
+<td><a href="https://roxiestreams.live/ncaa-streams-1">FCS Championship</a></td>
+<td>January 05, 2026 16:30 PM</td>
 <td><span class="countdown-timer" data-end="January 05, 2026 10:00:00 AM" data-start="January 04, 2026 10:00:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/nba">NBA</a></td>
-<td>January 04, 2026 11:00 AM</td>
-<td><span class="countdown-timer" data-end="January 05, 2026 11:00:00 AM" data-start="January 04, 2026 11:00:00 AM"></span></td>
+<td><a href="https://roxiestreams.live/wwe-streams">WWE RAW</a></td>
+<td>January 05, 2026 17:00 PM</td>
+<td><span class="countdown-timer" data-end="January 05, 2026 09:30:00 AM" data-start="January 04, 2026 09:30:00 AM"></span></td>
 </tr>
 <tr>
 </tr></tr></tbody>
