--- a/index.html
+++ b/index.html
@@ -185,18 +185,18 @@
 <tr>
 <tr>
 <td><a href="https://roxiestreams.live/nba">NBA</a></td>
-<td>January 05, 2026 16:00 PM</td>
-<td><span class="countdown-timer" data-end="January 05, 2026 09:30:00 AM" data-start="January 04, 2026 09:30:00 AM"></span></td>
+<td>January 05, 2026 4:00 PM</td>
+<td><span class="countdown-timer" data-end="January 06, 2026 04:00:00 PM" data-start="January 05, 2026 04:00:00 PM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.live/ncaa-streams-1">FCS Championship</a></td>
-<td>January 05, 2026 16:30 PM</td>
-<td><span class="countdown-timer" data-end="January 05, 2026 10:00:00 AM" data-start="January 04, 2026 10:00:00 AM"></span></td>
+<td>January 05, 2026 4:30 PM</td>
+<td><span class="countdown-timer" data-end="January 06, 2026 04:30:00 PM" data-start="January 05, 2026 04:30:00 PM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.live/wwe-streams">WWE RAW</a></td>
-<td>January 05, 2026 17:00 PM</td>
-<td><span class="countdown-timer" data-end="January 05, 2026 09:30:00 AM" data-start="January 04, 2026 09:30:00 AM"></span></td>
+<td>January 05, 2026 5:00 PM</td>
+<td><span class="countdown-timer" data-end="January 06, 2026 05:00:00 PM" data-start="January 05, 2026 05:00:00 PM"></span></td>
 </tr>
 <tr>
 </tr></tr></tbody>
