--- a/soccer.html
+++ b/soccer.html
@@ -98,22 +98,37 @@
 <tr>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-1">Galatasaray vs Trabzonspor</a></td>
-<td>January 04, 2026 09:30 AM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-1">Pisa vs Como</a></td>
+<td>January 04, 2026 06:00 AM</td>
 <td><span class="countdown-timer" data-end="January 05, 2026 09:30:00 AM" data-start="January 04, 2026 09:30:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-2">Leicester City vs West Bromwich Albion</a></td>
-<td>January 04, 2026 09:30 AM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-2">Salzburg vs Bayern München</a></td>
+<td>January 04, 2026 06:00 AM</td>
 <td><span class="countdown-timer" data-end="January 05, 2026 09:30:00 AM" data-start="January 04, 2026 09:30:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-13">PSG vs Paris</a></td>
-<td>January 04, 2026 11:40 AM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-1">Lecce vs Roma</a></td>
+<td>January 04, 2026 09:00 AM</td>
 <td><span class="countdown-timer" data-end="January 05, 2026 11:40:00 AM" data-start="January 04, 2026 11:40:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-4">Real Sociedad vs Atlético Madrid</a></td>
+<td><a href="https://roxiestreams.live/soccer-streams-1">Sassuolo vs Juventus</a></td>
+<td>January 04, 2026 11:45 AM</td>
+<td><span class="countdown-timer" data-end="January 05, 2026 12:00:00 PM" data-start="January 04, 2026 12:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-4">Rangers vs Aberdeen</a></td>
+<td>January 04, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="January 05, 2026 12:00:00 PM" data-start="January 04, 2026 12:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-5">West Ham United vs Nottingham Forest</a></td>
+<td>January 04, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="January 05, 2026 12:00:00 PM" data-start="January 04, 2026 12:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-4">Granada vs Rayo Vallecano</a></td>
 <td>January 04, 2026 12:00 PM</td>
 <td><span class="countdown-timer" data-end="January 05, 2026 12:00:00 PM" data-start="January 04, 2026 12:00:00 PM"></span></td>
 </tr>
