--- a/nba.html
+++ b/nba.html
@@ -254,6 +254,110 @@
       </tr>
      </tbody>
     </table>
+    <h2>
+     NBA Schedule for January 06, 2026
+    </h2>
+    <table id="eventsTable">
+     <thead>
+      <tr>
+       <th>
+        Event
+       </th>
+       <th>
+        Start Time
+       </th>
+       <th>
+        Countdown
+       </th>
+      </tr>
+     </thead>
+     <tbody>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-1">
+         Cleveland Cavaliers vs Indiana Pacers
+        </a>
+       </td>
+       <td>
+        January 06, 2026 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 07, 2026 4:00 PM:00" data-start="January 06, 2026 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-2">
+         Orlando Magic vs Washington Wizards
+        </a>
+       </td>
+       <td>
+        January 06, 2026 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 07, 2026 4:00 PM:00" data-start="January 06, 2026 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-3">
+         San Antonio Spurs vs Memphis Grizzlies
+        </a>
+       </td>
+       <td>
+        January 06, 2026 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 07, 2026 5:00 PM:00" data-start="January 06, 2026 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-4">
+         Miami Heat vs Minnesota Timberwolves
+        </a>
+       </td>
+       <td>
+        January 06, 2026 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 07, 2026 5:00 PM:00" data-start="January 06, 2026 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-5">
+         Los Angeles Lakers vs New Orleans Pelicans
+        </a>
+       </td>
+       <td>
+        January 06, 2026 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 07, 2026 5:00 PM:00" data-start="January 06, 2026 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-6">
+         Dallas Mavericks vs Sacramento Kings
+        </a>
+       </td>
+       <td>
+        January 06, 2026 8:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 07, 2026 8:00 PM:00" data-start="January 06, 2026 8:00 PM:00">
+        </span>
+       </td>
+      </tr>
+     </tbody>
+    </table>
     <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
      <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
       <li class="nav-item">
