--- a/nhl.html
+++ b/nhl.html
@@ -119,6 +119,59 @@
             <td><a href="https://roxiestreams.live/nhl-streams-5">Minnesota Wild vs Los Angeles Kings</a></td>
             <td>January 05, 2026 07:30 PM</td>
             <td><span class="countdown-timer" data-end="2026-01-06 19:30:00" data-start="2026-01-05 19:30:00"></span></td>
+        </tr>
+        <tr style="background-color: #333; color: white;">
+            <td colspan="3"><strong>Tuesday, January 06, 2026</strong></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-1">Vancouver Canucks vs Buffalo Sabres</a></td>
+            <td>January 06, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-07 16:00:00" data-start="2026-01-06 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-2">Colorado Avalanche vs Tampa Bay Lightning</a></td>
+            <td>January 06, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-07 16:00:00" data-start="2026-01-06 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-3">Anaheim Ducks vs Philadelphia Flyers</a></td>
+            <td>January 06, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-07 16:00:00" data-start="2026-01-06 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-4">Dallas Stars vs Carolina Hurricanes</a></td>
+            <td>January 06, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-07 16:00:00" data-start="2026-01-06 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-5">New Jersey Devils vs New York Islanders</a></td>
+            <td>January 06, 2026 04:30 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-07 16:30:00" data-start="2026-01-06 16:30:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-6">Florida Panthers vs Toronto Maple Leafs</a></td>
+            <td>January 06, 2026 04:30 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-07 16:30:00" data-start="2026-01-06 16:30:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-7">Vegas Golden Knights vs Winnipeg Jets</a></td>
+            <td>January 06, 2026 05:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-07 17:00:00" data-start="2026-01-06 17:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-8">Nashville Predators vs Edmonton Oilers</a></td>
+            <td>January 06, 2026 06:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-07 18:00:00" data-start="2026-01-06 18:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-9">Columbus Blue Jackets vs San Jose Sharks</a></td>
+            <td>January 06, 2026 07:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-07 19:00:00" data-start="2026-01-06 19:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-10">Boston Bruins vs Seattle Kraken</a></td>
+            <td>January 06, 2026 07:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-07 19:00:00" data-start="2026-01-06 19:00:00"></span></td>
         </tr></tbody></table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
